src/styles/index.css
@charset "UTF-8";

html, body {
    position:fixed;
    top:0;
    bottom:0;
    left:0;
    right:0;
    overflow: scroll;
    text-rendering: optimizeLegibility;
    cursor: cell;
    scroll-behavior: smooth;
    orientation: landscape;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;
}

@media screen and (max-width: 740px) {
    html, body {
        overflow: auto;
    }
}

* {
    padding: 0;
    margin: 0;
    background-blend-mode: color-burn;
}

.button-dropdown{
    position: absolute;
    right: 10vw;
}

.full-page{
    height: 100vh;
    width: 100vw;
}

.fill {
    height: 100%;
    width: 100%;
}

.inline-block{
    display: inline-block;
}

.absolute{
    position:absolute;
}

.relative{
    position: relative;
}

.left-0{
    left:0;
}

.right-0{
    right:0;
}


.centerBox{
    display: flex;
    justify-content: center;
}




/* ---------------------------------- LAYOUT ---------------------------------- */

/* ------- graphic elements ---------*/

.border-dots{
    border-bottom: white solid 3px;
}

.borderLine-top{
    border-top: 1px solid
}

.borderLine-left{
    margin-left: 30px;
    border-left: 1px dotted;
}


.lineH_dash {
    border-bottom: white dotted 1.5px;
    height: 13px;
}

/* ---------------------------------- ACCORDION ---------------------------------- */

.collapsed {
    color: #007bff;
    background: var(--yellow_ish);
    padding: 15px 15px;
    text-align: center;
}

/* ---------------------------------- NAV + HEADER  ---------------------------------- */

.nav--header {
    color: black;
    transition: color 300ms ease-in-out;
    text-align: center;
}

.nav--header:hover {
    color: #afc6ae
 }

.emptyFrameModel__1 {
    position:relative;
    width: 400px;
    height: 100%;
    left: 30vw;
    border: 3px solid var(--main__green);
}

.black {
    background:black;
}

.box-title {
    padding: 10px;
}


.fade {
    background: linear-gradient(transparent, black);
    height: 100%;
    z-index: 30000000;
    width: 33.333vw;
    bottom: 0;
    top: 0;
    position: absolute;
}

.fade-in{
    animation: fadeIn ease 2s;
    -webkit-animation: fadeIn ease 2s;
    -moz-animation: fadeIn ease 2s;
    -o-animation: fadeIn ease 2s;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-moz-keyframes fadeIn {
    0% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}

@-webkit-keyframes fadeIn {
    0% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}

@-o-keyframes fadeIn {
    0% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}

.fade-out{
    animation: fadeOut ease 2s;
    -webkit-animation: fadeOut ease 2s;
    -moz-animation: fadeOut ease 2s;
    -o-animation: fadeOut ease 2s;
}


@keyframes fadeOut {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@-moz-keyframes fadeOut {
    0% {
        opacity:1;
    }
    100% {
        opacity:0;
    }
}

@-webkit-keyframes fadeOut {
    0% {
        opacity:1;
    }
    100% {
        opacity:0;
    }
}

@-o-keyframes fadeOut {
    0% {
        opacity:1;
    }
    100% {
        opacity:0;
    }
}

.black-box{
    background:black;
    height: fit-content;
}

.white-box{
    background:white;
    height: 20vh;
    margin: 20vh;
    padding: 10vh;
}



.box{
    width: 500px;
    font-size: 18px;
} @media (max-width: 1224px) {
    .box {
        width: 90%;
        padding: 5%;
        font-size: 30px;
        text-align: justify;
    }
}

.box-text{
    height: 30vw;
    font-size: 20px;
    padding: 40px;
}

.border-white{
    border: white solid 3px;
    /* border-color: rgba(255,255,255,var(--tw-border-opacity)); */
}

.text-center{
    text-align: center;
}

.left {
    text-align: left;
}

.right {
    text-align: right;
}

.justify {
    text-align: justify;
}

.modal {
    border-left: dotted black;
}

.title-box{
    margin-top: 4px;
    height: 6vh;
}

.title-box__top{
    display:grid;
    grid-template-columns: auto;
}

.title-box__title {
    font-size: 20px;
    text-align: left;
    margin-bottom: 20px;
}

.title-box__title:hover{
    transition-duration: 1.5s;
    transition: color 2s ease-out;
    color: var(--fluo__green)
}

.glossText{
    transform: rotate(90deg);
}


.easeBorder__green{
    border: 2px solid var(--main__green);
}

.searchbox{
    height: 33%;
    width: 10vw;
}

.studio_box {
    height: 100px;
    color: black;
    border: white solid 2px;
}


.modelTitle{
    text-align: center;
}

.center{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.langButton {
    height: 20px;

}
.bm-burger-button {
    position: fixed;
    width: 30px;
    height: 30px;
    left: 36px;
    top: 36px;
    background-color: blue;
}

button{
    background: transparent;
}

.overlay {
    right:0;
    left:0;
    bottom:0;
    top:0;
}

input{
    -webkit-appearance: none;
    background: dimgray;
    height: 1px;
    border-radius: 20px;
    width: fit-content;
}

.dotLine {
    border: dotted 4px black;
    margin-right: 10px;
}

.hamburgerMenu{
    position: absolute;
    z-index: 19999999999;
    left:0;
    right: 0;
    height: 40vh;
    width: 100vw;
}

.firstBar {
    transition: all 0.35s linear;
    transform: rotate(0deg);
    transform-origin: 0% 50%;
    transform: rotate(45deg);
}

.secondBar {
    transition: all 0.35s linear;
    transform: rotate(0deg);
    transform-origin: 0% 50%;
    transform: rotate(-45deg);
}




/* ANIMATIONSSS */

.button-lang{
    border: 2px solid black;
    border-left: none;
    text-align: center;
    color: black;
    font-size: 20px;
    padding-top: 16px;
}

.rowScroll {
    border: 4px none var(--main__green);
    height: auto;
    overflow-y:auto;
    margin-top: 20px;
}

.rowScrollMain{
    height: 100vh;
    overflow-y:auto;
    overflow-x:hidden;
}
/* ... */

